--- a/make24/make24.css
+++ b/make24/make24.css
@@ -39,6 +39,12 @@ body {
     border-radius: 0;
     border: 2px solid #bbb; 
     font-size: 20px;
+    color: #000;
+}
+
+#toggleHidden {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .button:active {
