--- a/19tet/19tet.css
+++ b/19tet/19tet.css
@@ -66,6 +66,13 @@ button:active {
     margin: 5px 0px;
 }
 
+.text {
+    font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 5px;
+    text-align: left;
+}
+
 .display {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
