--- a/19tet/19tet.css
+++ b/19tet/19tet.css
@@ -156,3 +156,11 @@ input[type="range"] {
     cursor: pointer;
     margin: 0px;
 }
+
+#help {
+    display: none;
+    position: absolute;
+    top: 35px;
+    left: 5px;
+    background-color: rgba(255, 255, 255, 0.9);
+}
