--- a/make24/make24.css
+++ b/make24/make24.css
@@ -52,6 +52,12 @@ body {
     color: #000;
 }
 
+.checkbox {
+    margin: 10px;
+    width: 20px;
+    height: 20px;
+}
+
 #toggleHidden {
     padding-left: 15px;
     padding-right: 15px;
