--- a/just_tuner/just_tuner.css
+++ b/just_tuner/just_tuner.css
@@ -118,6 +118,7 @@ input[type="range"] {
 .control select {
     color: black;
     min-width: 100px;
+    max-width: 100px;
     height: 20px;
     outline: 2px solid #bbb; 
     border: none;
